--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15",
+    "socket.io": "^4.5.1",
     "ts-node": "^10.7.0",
     "twilio": "^3.77.1",
     "validator": "^13.7.0"
